--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,9 @@
-2008-??-?? -- release 0.334
+2008-11-25 -- release 0.334
     * feature: support for BUILDARGS in Coat objects
     * new tests from Moose in t/moose_tests/
     * change: error message when loading a class (moose)
+    * fix performance gap when coercing thanks to silent_validate
+      (thanks to Rached Ben Mustapha for finding this out).
 
 2008-09-26 -- release 0.333
     * bugfix: fixes multiple coercions on the same subtype.
